syntax="proto3";

package protocol;

message Reply {
  bytes NewData = 1;
}
